# poetry-plugin-ignore-build-script

./: pyproject.toml
